Java-17 code cleaning...