@@ -33,7 +33,7 @@ public class Entities {
                 start++;
                 radix = 16;
             }
-            Character c = new Character((char) Integer.parseInt(entity.substring(start), radix));
+            Character c = Character.valueOf((char) Integer.parseInt(entity.substring(start), radix));
             return c.toString();
         } else {
             String s = (String) decoder.get(entity);
@@ -83,7 +83,7 @@ public class Entities {
      */
     @SuppressWarnings("unchecked")
 	final static void add(String entity, int value) {
-        decoder.put(entity, (new Character((char) value)).toString());
+        decoder.put(entity, (Character.valueOf((char) value)).toString());
         if (value < 0x100) {
             encoder[value] = entity;
         }
